🚩 Update code styling and fix layout issues

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,15 @@
+:root {
+  --diff-background: #c7254e;
+  --remove-background: rgba(244, 63, 94, .4);
+  --remove-color: #f20c00;
+  --add-background: rgba(16, 185, 129, .4);
+  --add-color: #3dd68c;
+  --highlighted-background: rgba(101, 117, 133, .5);
+  --error-background: rgba(244, 63, 94, .4);
+  --warning-background: #daac61;
+  --highlighted-word-background: #202127;
+  --highlighted-word-border: #3eede7;
+}
 body {
   --uno: antialiased;
   color: theme("colors.foreground");
@@ -98,7 +110,7 @@ article.heti a code:hover {
     @apply rounded-xl;
   }
   
-  @keyframes slide-enter {
+@keyframes slide-enter {
   0% {
     transform: translateY(10px);
     opacity: 0
@@ -141,4 +153,77 @@ article.heti a code:hover {
   .slide-enter-content > *:nth-child(18) { --enter-stage: 18; }
   .slide-enter-content > *:nth-child(19) { --enter-stage: 19; }
   .slide-enter-content > *:nth-child(20) { --enter-stage: 20; }
+}
+
+.heti code .diff {
+  display: inline-block;
+  background-color: var(--diff-background);
+  margin: 0 -24px;
+  padding: 0 24px;
+  width: calc(100% + 40px);
+}
+
+.heti code .diff.remove {
+  background-color: var(--remove-background);
+  opacity: 0.8;
+}
+
+.heti code .diff.add {
+  background-color: var(--add-background);
+  opacity: 0.8;
+}
+
+.heti code .diff:before,
+.heti code .diff.remove:before,
+.heti code .diff.add:before {
+  position: absolute;
+  left: 10px;
+}
+
+.heti code .diff.remove:before {
+  content: "–";
+  color: var(--remove-color);
+}
+
+.heti code .diff.add:before {
+  content: "+";
+  color: var(--add-color);
+}
+
+.heti code .highlighted {
+  background-color: var(--highlighted-background);
+  transition: background-color .5s;
+  margin: 0 -24px;
+  padding: 0 24px;
+  width: calc(100% + 40px);
+  display: inline-block;
+}
+
+.heti code .highlighted.error {
+  background-color: var(--error-background);
+  opacity: 0.8;
+}
+
+.heti code .highlighted.warning {
+  background-color: var(--warning-background);
+  opacity: 0.8;
+}
+
+.heti code .highlighted-word {
+  background-color: var(--highlighted-word-background);
+  border: 1px solid var(--highlighted-word-border);
+  padding: 1px 3px;
+  margin: -1px 0;
+  border-radius: 4px;
+}
+
+.heti .has-focused .line:not(.focused) {
+  filter: blur(.095rem);
+  opacity: .7;
+  transition: filter .35s, opacity .35s;
+}
+
+.heti .has-focused code:hover .line:not(.focused) {
+  filter: blur(0);
+  opacity: 1;
 }
